# OpenAI4S

./: .gitignore  .gitleaksignore  .mailmap  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_zh.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  setup.sh
.github/: CODEOWNERS  CONTENTS.md  CONTENTS_zh.md  README.md  README_zh.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: README.md  README_zh.md
.github/contributors/: README.md  README_zh.md
.github/workflows/: README.md  README_zh.md  ci.yml  codeql.yml  contributors.yml  release.yml  scorecard.yml  secret-scan.yml
assets/: README.md  README_zh.md
docs/: README.md  README_zh.md  architecture.md  backend-extension-guide.md  backend-refactor-architecture.md  compute.md  configuration.md  index.md  jupyter.md  package-architecture.md  platforms.md  refactor-plan.md  release-validation.md  response-contract.json  response-schemas.json  science-connectors.md  security.md  skills.md  startup-guide.md  v02-decisions.md  webapp-api.md  webapp.md  webshare.md
docs/.vitepress/: config.mts
docs/architecture/: action-routing.md  artifacts-and-provenance.md  checkpoints-and-recovery.md  failure-boundaries.md  kernels-and-host-rpc.md  projections-and-persistence.md  system-context.md  web-runtime.md
docs/contributing/: codebase-map.md  testing.md
docs/operations/: data-management.md  deployment.md  index.md  security-hardening.md
docs/reference/: documentation-policy.md  implementation-status.md  terminology.md
docs/zh/: architecture.md  backend-extension-guide.md  compute.md  configuration.md  index.md  jupyter.md  release-validation.md  security.md  skills.md  webapp-api.md  webapp.md
envs/: README.md  README_zh.md  python.yml  r.yml
harness/: README.md  README_zh.md  __init__.py  characterize.py  cli.py  faults.py  normalize.py  runner.py  schema.py
harness/evals/: README.md  README_zh.md  __init__.py  action_routing.py
harness/golden_traces/: README.md  README_zh.md
harness/providers/: README.md  README_zh.md  __init__.py  scripted_llm.py
harness/scenarios/: README.md  README_zh.md
harness/smoke/: README.md  README_zh.md  __init__.py  linux_sandbox.py  macos_sandbox.py  sandbox_boundary.py
openai4s/: README.md  README_zh.md  artifact_restore.py  capabilities.py  config.py  diagnostics.py  doctor.py  egress.py  evidence.py  host_dispatch.py  jobs.py  observability.py  onboarding.py  permissions.py  pkgscan.py  platform_support.py  prompts.py  review.py  store.py  webtools.py
openai4s/adapters/: README.md  README_zh.md
openai4s/agent/: README.md  README_zh.md  actions.py  compaction.py  control.py  delegation.py  engine.py  events.py  finalize.py  ledger.py  loop.py  models.py  ports.py  runtime.py
openai4s/benchmark/: README.md  README_zh.md  __init__.py  model.py  runner.py  steps.py
openai4s/cli/: README.md  README_zh.md  main.py
openai4s/compute/: README.md  README_zh.md  manager.py  manifest.py  safe_archive.py  states.py
openai4s/execution/: README.md  README_zh.md  __init__.py  coordinator.py  dependencies.py  models.py  watchdog.py
openai4s/host/: README.md  README_zh.md  __init__.py  bash.py  completion.py  connector_manifest.py  data.py  delegation.py  delegation_policy.py  endpoints.py  files.py  llm.py  mcp.py  progress.py  remote_capabilities.py  remote_science.py  science.py  session.py  skills.py
openai4s/kernel/: README.md  README_zh.md  background.py  env_generations.py  environment.py  environments.py  manager.py  preinstall.py  provenance.py  r_kernel.py  r_worker.R  supervisor.py  worker.py
openai4s/llm/: README.md  README_zh.md  __init__.py  capabilities.py  catalog.py  client.py  messages.py  models.py  registry.py  resolve.py  tooling.py  transport.py
openai4s/mcp_servers/: README.md  README_zh.md
openai4s/sdk/: README.md  README_zh.md  bash.py  compute.py  host.py
openai4s/security/: README.md  README_zh.md  __init__.py  audit_hook.py  biosecurity.py  byoc_confinement.py  classifier.py  injection.py  permissions.py  sandbox.py  secret_broker.py  secret_migration.py
openai4s/server/: README.md  README_zh.md  action_timeline.py  agent_run.py  artifacts.py  cell_run.py  completions.py  (+32 more)
openai4s_compute_provider/: README.md  README_zh.md  __init__.py  __main__.py  _resident.py
openai4s_worker_runtime/: README.md  README_zh.md  __init__.py
readme-gifs-hd/: README.md  README_zh.md
scripts/: README.md  README_zh.md  build_macos_dmg.sh  capture_response_contract.py  capture_response_schemas.py  check_directory_readmes.py  check_docs.py  connector_canary.py  describe_macos_image.py  dmg_bundled_packages.txt  make_app_icon.py  release_import_smoke.py  release_pipeline.py  setup_envs.sh  source_secret_scan.py  update_contributors.py  verify_macos_bundle.py  verify_release_artifacts.py  verify_release_tag.py
skills/: README.md  README_zh.md
spectra-pipeline/: readme.md  run.py
tests/: README.md  README_zh.md  browser_matrix.mjs  browser_smoke.mjs  conftest.py  test_action_ledger_repository.py  test_action_ledger_runtime.py  test_action_routing_eval.py  test_action_timeline_service.py  test_actions.py  test_agent.py  test_agent_control.py  test_agent_engine.py  test_agent_profile_repository.py  test_agent_runtime.py  test_analysis_skills.py  test_annotation_repository.py  test_artifact_control_tools.py  test_artifact_env_provenance.py  test_artifact_manager.py  test_artifact_mutation_service.py  test_artifact_repository.py  test_artifact_scope.py  test_backend_import_contract.py  test_background_cleanup.py  test_bash_authorization.py  test_benchmark_workflows.py  test_bioprobench_skill.py  test_byoc_confinement.py  test_byoc_confinement_scope.py  test_capability_state.py  test_catalyst_sar_screening.py  test_cell_dependencies.py  test_cell_execution_service.py  test_cell_watchdog.py  test_checkpoint_state_snapshots.py  test_cli_contract.py  test_compute_durability.py  test_compute_harvest_safety.py  test_compute_job_races.py  (+158 more)
workflows/: README.md  README_zh.md
(+314 files in other folders)
