[project]
name = "openai4s"
version = "0.1.0"
description = "A pure-stdlib hybrid Code-as-Action scientific research agent."
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = []   # pure stdlib by design; LLM client uses urllib
keywords = ["agent", "scientific-computing", "code-as-action", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/PKU-YuanGroup/OpenAI4S"
Documentation = "https://github.com/PKU-YuanGroup/OpenAI4S/tree/main/docs"
Issues = "https://github.com/PKU-YuanGroup/OpenAI4S/issues"
Source = "https://github.com/PKU-YuanGroup/OpenAI4S"

[project.optional-dependencies]
# The kernel is spawned with sys.executable, so anything in the active venv is
# visible to agent cells. These libs are OPTIONAL: the core runs stdlib-only and
# every numpy/pandas/matplotlib import in-tree is guarded by try/except ImportError.
# Install with: uv sync --extra science
science = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[dependency-groups]
# Dev/test tooling (uv installs these by default with `uv sync`).
dev = [
    "pytest>=7.4",
    "pre-commit>=3.0",
]

[project.scripts]
openai4s = "openai4s.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "openai4s*",
    "openai4s_compute_provider*",
    "openai4s_worker_runtime*",
    # These are data-only namespace packages. Keeping them beside the installed
    # openai4s package preserves Config.skills_dir and `openai4s setup` without
    # adding a runtime resource-loader dependency.
    "skills*",
    "envs*",
]

[tool.setuptools.package-data]
openai4s = [
    "compute/templates/*.tmpl",
    "kernel/*.R",
    "server/webui/*.css",
    "server/webui/*.gif",
    "server/webui/*.html",
    "server/webui/*.js",
    "server/webui/vendor/*.js",
    "server/webui/vendor/fonts/*.woff2",
]
"*" = ["*.html", "*.json", "*.lock", "*.md", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run = the offline gate: quiet, strict markers, and every marker that
# needs live external resources deselected. Opt in explicitly, e.g.:
#   uv run pytest -m gpu
# (a command-line -m overrides the one below).
addopts = '-q --strict-markers -m "not external and not network and not live_llm and not gpu and not ssh and not lab and not docker and not browser"'
markers = [
    # Suite-structure markers (informational; all run by default).
    "unit: fast, isolated unit test",
    "integration: multi-component test, still offline",
    "e2e: end-to-end flow through the agent loop, still offline",
    "security: security/secret-handling regression test",
    "platforms: compute/endpoint/lab platform test (offline fakes)",
    "skills: skill catalog/loader test",
    "slow: slow but still offline test",
    "golden: golden-trace comparison test",
    "smoke: minimal smoke test",
    # Opt-in markers (EXCLUDED from the default run and from default PR CI;
    # these may require secrets, hardware, or live services).
    "external: requires any live external resource (umbrella marker)",
    "network: requires real network access",
    "live_llm: requires a real LLM provider and API key",
    "gpu: requires a physical GPU",
    "ssh: requires a reachable SSH host",
    "lab: requires lab hardware",
    "docker: requires a Docker daemon",
    "browser: requires a real browser session",
]
